# IDKBrowser

./: CMakeLists.txt  README.md
src/: Browser.cpp  Browser.h  MainWindow.cpp  MainWindow.h  NetworkManager.c  NetworkManager.h  PrivacyManager.cpp  PrivacyManager.h  trackers.json
src/UI/: darkmode.css  homepage.html
